--- a/Layout 3/index.html
+++ b/Layout 3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>Layout 2</title>
+    <title>Layout 3</title>
 </head>
 <body>
     <div>Company Logo</div>
@@ -17,20 +17,19 @@
         </ul>
     </nav>
     <div id="featured_prod">
-        <h1>Lorem ipsum dolor sit amet, ne saepe<br> phaedrum cotidieque has, natum zril pro ei.</h1>
+        <h1>Lorem ipsum dolor sit amet, ne saepe<br> phaedrum cotidieque has, natum zril pro.</h1>
         <h2>Cu vel aliquid lobortis deseruisse. Nam at adipisci dignissim forensibus. Qui an recteque maluisset assentior, cu ferri aperiam imperdiet sed.</h2>
     </div>
-    <div id="products">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    </div>
+    
+    <div id="title1">Title</div>
+    <div id="title2">Title</div>
+    <div id="blog1">Blog Post 1</div>
+    <div id="featured_product1">Featured Product 1</div>
+    <div id="featured_product2">Featured Product 2</div>
+    <div id="blog2">Blog Post 2</div>
+    <div id="featured_product3">Featured Product 3</div>
+    <div id="featured_product4">Featured Product 4</div>
+
     <footer>
         <p>Copyright notice</p>
     </footer>
